# claude-prompt-generator

./: .env_sample  PromptGuide.md  README.md  requirements.txt  translate.py
src/: .env_sample  Makefile  PromptGuide.md  ape.py  app.py  calibration.py  demo.py  metaprompt.py  metaprompt.txt  optimize.py  pyproject.toml  rater.py  requirements.txt  translate.py  translations.json
src/application/: soe_prompt.py
src/preflight/: check.py
src/prompt/: error_analysis_classification.prompt  prompt_guide_short.prompt  step_prompt_classification.prompt
