[tool.poetry]
name = "ut_sample"
version = "0.0.1"
description = "Sample project to demonstrate how to use build Unit Test pipeline"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/yike5460/justNotes.git"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
pytest = "^7.3.0"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.2.6"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"
pytest-mock  = "^3.10.0"
pytest-socket = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest-snapshot = "^0.9.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/unit_tests",
    "tests/integration_tests",
]
addopts = "-ra -q"

[tool.ruff]
exclude = []

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "T201", # print
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data"]

[tool.coverage.run]
omit = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
